components/platform/cert-manager/base/cilium-networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: zylos-cert-manager-cnp
  namespace: cert-manager
spec:
  endpointSelector: {}
  ingress:
    - fromEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "10250"
              protocol: TCP

    - fromEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": observability
      toPorts:
        - ports:
            - port: "9402"
              protocol: TCP

  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "6443"
              protocol: TCP

    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
